@@ -26,10 +26,12 @@
 
 package fr.prima.omiscid.test;
 
+import fr.prima.omiscid.user.exception.UnknownConnector;
 import fr.prima.omiscid.user.service.Service;
 import fr.prima.omiscid.user.util.Utility;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
@@ -37,6 +39,7 @@ import java.util.Vector;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
+/*- IGNORE -*/
 /*- IGNORE -*/
 public class Radio {
     private final static String serviceName = "Radio";
@@ -70,45 +73,9 @@ public class Radio {
             service.addVariable(titleVariableName, "integer", "Titre de la Chanson", fr.prima.omiscid.user.variable.VariableAccessType.READ);
             service.setVariableValue(titleVariableName, "nono le robot");
             service.addConnector(audioOutputName, "output for sound", fr.prima.omiscid.user.connector.ConnectorType.OUTPUT);
-            Runtime.getRuntime().exec(new String[]{"mkfifo", pipe}).waitFor();
-            new File(pipe).deleteOnExit();
-            Process mplayer = Runtime.getRuntime().exec(args.toArray(new String[0]));
-            consume(mplayer.getInputStream());
-            consume(mplayer.getErrorStream());
-            InputStream input = new FileInputStream(pipe);
             service.start();
-            int count = 0;
-            int read;
-            /*
-            byte[] buffer = new byte[1024];
-            for (int i = 0; i < 44; i++) {
-                //System.out.println(i+": "+Integer.toHexString(input.read()));
-            }
-             */
-            byte[] buffer = new byte[sampleRate];
-            long frameLength = 1000 /*ms in a second*/ * buffer.length / channels / 2/*bytes per sample*/ / sampleRate;
-            if (frameLength * 2*2*sampleRate != 1000 * buffer.length) {
-                System.err.println("Warning "+ (frameLength * 2*2*sampleRate)+ "!="+ (1000 * buffer.length));
-            }
-            long nextRead = System.currentTimeMillis() + frameLength;
-            while (-1 != (read = input.read(buffer, count, buffer.length-count))) {
-                count += read;
-                if (count == buffer.length) {
-                    byte[] header = Utility.stringToByteArray("<data time=\"123\" nbEch=\""+(buffer.length/4)+"\" />\r\n");
-                    byte[] message = new byte[header.length + buffer.length];
-                    System.arraycopy(header, 0, message, 0, header.length);
-                    System.arraycopy(buffer, 0, message, header.length, buffer.length);
-                    service.sendToAllClients(audioOutputName, message);
-                    count = 0;
-                    nextRead += frameLength;
-                }
-                //System.out.println(input.available());
-                while (System.currentTimeMillis() - nextRead < 0 ) {
-                    Thread.sleep(1);
-                }
-                /*
-                while (input.available() < 16*1024) {
-                }*/
+            while (true) {
+                startPlayerAndStream(service, args, pipe);
             }
         } catch (Exception ex) {
             Logger.getLogger(Radio.class.getName()).log(Level.SEVERE, null, ex);
@@ -133,6 +100,49 @@ public class Radio {
                 }
             }
         }).start();
+    }
+
+    private void startPlayerAndStream(Service service, Vector<String> args, String pipe) throws InterruptedException, IOException, FileNotFoundException {
+        System.err.println("START");
+        Runtime.getRuntime().exec(new String[]{"mkfifo", pipe}).waitFor();
+        new File(pipe).deleteOnExit();
+        Process mplayer = Runtime.getRuntime().exec(args.toArray(new String[0]));
+        consume(mplayer.getInputStream());
+        consume(mplayer.getErrorStream());
+        InputStream input = new FileInputStream(pipe);
+        int count = 0;
+        int read;
+        /*
+        byte[] buffer = new byte[1024];
+        for (int i = 0; i < 44; i++) {
+        //System.out.println(i+": "+Integer.toHexString(input.read()));
+        }
+         */
+        byte[] buffer = new byte[sampleRate];
+        long frameLength = 1000 * buffer.length / channels / 2 / sampleRate;
+        if (frameLength * 2 * 2 * sampleRate != 1000 * buffer.length) {
+            System.err.println("Warning " + (frameLength * 2 * 2 * sampleRate) + "!=" + (1000 * buffer.length));
+        }
+        long nextRead = System.currentTimeMillis() + frameLength;
+        while (-1 != (read = input.read(buffer, count, buffer.length - count))) {
+            count += read;
+            if (count == buffer.length) {
+                byte[] header = Utility.stringToByteArray("<data time=\""+"123"+"\" nbEch=\"" + (buffer.length / 4) + "\" />\r\n");
+                byte[] message = new byte[header.length + buffer.length];
+                System.arraycopy(header, 0, message, 0, header.length);
+                System.arraycopy(buffer, 0, message, header.length, buffer.length);
+                service.sendToAllClients(audioOutputName, message);
+                count = 0;
+                nextRead += frameLength;
+            }
+            //System.out.println(input.available());
+            while (System.currentTimeMillis() - nextRead < 0) {
+                Thread.sleep(1);
+            }
+            /*
+            while (input.available() < 16*1024) {
+            }*/
+        }
     }
 
 }
